finished up styling the article, added author card, but still need to finish Article styles as I only used DNOMs areticle for reference

--- a/src/components/RichText.css
+++ b/src/components/RichText.css
@@ -1,3 +1,8 @@
-.btn {
-    @apply px-4 py-2 rounded font-semibold bg-gray-200 text-black;
+.article {
+  font-size: 1rem;
+}
+
+.article ul li p,
+.artcile ol li p {
+  margin-bottom: 0;
 }
