--- a/src/styles/document.css
+++ b/src/styles/document.css
@@ -47,3 +47,15 @@ body:before {
 a {
   color: #564dc1;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Condensed", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: antialiased;
+  margin: 0;
+}
