finished up styling for article on desktop breakpoint and added favicon

--- a/src/styles/document.css
+++ b/src/styles/document.css
@@ -25,6 +25,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #00295b;
   overscroll-behavior: none;
+  line-height: 1.5;
 }
 
 body:before {
