--- a/src/styles/document.css
+++ b/src/styles/document.css
@@ -65,8 +65,8 @@ hr {
   margin-bottom: 1.5rem;
 }
 
-#disqus_thread > iframe:first-of-type,
+/* #disqus_thread > iframe:first-of-type,
 #disqus_recommendations
 {
   display: none!important;
-}
+} */
